# fitai

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.build.yml  docker-compose.yml  pyproject.toml  tailwind.config.js
.github/workflows/: build.yml
app/: auth.py  config.py  db.py  enums.py  generation.py  i18n.py  jobs.py  llm_client.py  main.py  models.py  nutrition.py  panels.py  progress.py  prompt_builder.py  response_parser.py  schemas.py  security.py  seed.py
app/locales/: fr.json
app/routers/: auth.py  goals.py  home.py  jobs.py  metrics.py  nutrition.py  plan.py  settings.py  workouts.py
app/static/: manifest.webmanifest
app/static/css/: app.css  input.css
app/static/js/: app.js
app/templates/: _fab.html  _nav.html  base.html  goals.html  home.html  login.html  metrics.html  nutrition.html  plan.html  register.html  session.html  settings.html
tests/: conftest.py  test_app_boot.py  test_app_boot_jobs.py  test_auth_routes.py  test_auth_unit.py  test_config.py  test_db.py  test_enums.py  test_generation.py  test_goals_routes.py  test_home_routes.py  test_i18n.py  test_i18n_keys.py  test_jobs.py  test_llm_client.py  test_metrics_routes.py  test_models.py  test_models_bodymetric.py  test_models_foodlog.py  test_models_goal.py  test_models_plan.py  test_nutrition.py  test_nutrition_routes.py  test_plan_parser.py  test_plan_routes.py  test_profile.py  test_progress.py  test_progress_summary.py  test_prompt_builder.py  test_prompt_builder_plan.py  test_response_parser.py  test_security.py  test_settings_routes.py  test_workouts_routes.py
(+14 files in other folders)
