[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "fitai"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110,<0.116",
    "uvicorn[standard]>=0.29",
    "sqlmodel>=0.0.16",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
    "bcrypt>=4.0",
    "anthropic>=0.40",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "httpx>=0.27"]

# Only the app/ package ships; otherwise setuptools flat-layout discovery
# trips over the runtime-created data/ directory ("Multiple top-level packages").
[tool.setuptools]
packages = ["app"]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["."]
testpaths = ["tests"]
